1. Added transcription, definition, and examples for English words; 2. Added full word info.